--- a/views/shop.pug
+++ b/views/shop.pug
@@ -3,11 +3,11 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        title products list
     body 
         main 
-            h1 My Products
-            p list of all products
-            ul
-                each product in products 
-                    li #{product}
+            h1 products 
+            p list of all products  
+                ul 
+                    each product in products 
+                        li #{product}
