--- a/views/shop.pug
+++ b/views/shop.pug
@@ -7,4 +7,4 @@ block content
             p list of all products  
                 ul
                     each product in products 
-                        li #{product}
+                        li #{product.title}
